openpearl-code/testsuite/must_not_compile/00_basics/042_spc_with_init.prl
MODULE(m1);

PROBLEM;
   SPC f1 FIXED INIT(1) GLOBAL(b);

MODEND;
